# Zk-VM

./: .gitignore  Cargo.toml  README.md  git_add_error.txt
.github/workflows/: zkvm-ci.yml
components/compiler/: Cargo.toml
components/compiler/src/: lib.rs
components/execution-engine/: Cargo.toml
components/execution-engine/src/: lib.rs  models.rs  runtime.rs
components/prover-node/: Cargo.toml  build.rs
components/prover-node/src/: consumer.rs  grpc_server.rs  lib.rs
components/scheduler/: Cargo.toml
components/scheduler/src/: lib.rs  webhooks.rs
components/scheduler/tests/: load_test.rs
components/storage/: Cargo.toml
components/storage/src/: lib.rs
components/verifier-api/: Cargo.toml
components/verifier-api/src/: main.rs  security.rs
contracts/src/: Marketplace.sol  Verifier.sol
cryptography/fri/: Cargo.toml
cryptography/fri/src/: lib.rs  recursion.rs
cryptography/plonkish/: Cargo.toml
cryptography/plonkish/src/: halo2_circuit.rs  lib.rs
cryptography/primitives/src/: lib.rs
docs/: index.md
examples/compliance-proofs/: circuit.rs
examples/ml-inference/: app.ts
examples/private-payments/: circuit.rs
infrastructure/helm/: Chart.yaml
infrastructure/monitoring/: grafana_dashboard.json  prometheus.yml  zkvm_alerts.yml
infrastructure/postgres/: schema.sql
infrastructure/terraform/: main.tf
proto/: trace.proto
sdks/python/: nexus_zkvm.py
sdks/rust-client/: Cargo.toml
sdks/rust-client/src/: lib.rs
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: index.ts
