[package]
name = "prover-node"
version = "0.1.0"
edition = "2021"

[dependencies]
execution-engine = { path = "../execution-engine" }
primitives = { path = "../../cryptography/primitives" }
plonkish = { path = "../../cryptography/plonkish" }
fri = { path = "../../cryptography/fri" }

tokio = { version = "1.49.0", features = ["full"] }
rdkafka = "0.39.0"
redis = "1.0.4"
bb8 = "0.9.1"
bb8-redis = "0.26.0"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
tonic = "0.14.5"
prost = "0.14.3"
tokio-stream = "0.1.18"

[features]
default = []
gpu = []
enclave = []

[build-dependencies]
tonic-build = "0.14.5"
