[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9.1"
bb8-redis = "0.26.0"
rdkafka = "0.39.0"
redis = "1.0.4"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
