[package]
name = "verifier-api"
version = "0.1.0"
edition = "2021"

[dependencies]
execution-engine = { path = "../execution-engine" }
compiler = { path = "../compiler" }
prover-node = { path = "../prover-node" }
primitives = { path = "../../cryptography/primitives" }
fri = { path = "../../cryptography/fri" }

# Axum for REST endpoints
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tower-http = "0.6.8"
jsonwebtoken = "10.3.0"
aws-sdk-kms = "1.102.0"
